force-app/main/default/objects/loan__Metro2_Parameters__c/loan__Metro2_Parameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Metro2 Parameters</label>
</CustomObject>