force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Borrower_Info_Class__c.field-meta.xml
<CustomField>
    <fullName>loan__Borrower_Info_Class__c</fullName>
    <inlineHelpText>This class is used to get the borrower information for the Metro2 file. Class must implement loan.LoanBorrowerInfo.</inlineHelpText>
    <label>Borrower Info Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>