force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Experian_Identifier__c.field-meta.xml
<CustomField>
    <fullName>loan__Experian_Identifier__c</fullName>
    <inlineHelpText>This contains the unique identification number assigned by Experian, a consumer reporting agency.</inlineHelpText>
    <label>Experian Identifier</label>
    <length>5</length>
    <type>Text</type>
</CustomField>