force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>loan__Identification_Number__c</fullName>
    <inlineHelpText>This is used to uniquely identify a Data furnisher. Data furnishers are typically creditors, lenders or debt collection agencies that a consumer has had an experience or a relationship with.</inlineHelpText>
    <label>Base Segment Identification Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>