force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Metro2_Query_Class__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Query_Class__c</fullName>
    <inlineHelpText>This class is used to generate the query for the Contact and Account objects. Class must implement loan.M2QueryGen.</inlineHelpText>
    <label>Metro2 Query Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>