force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Program_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Program_Date__c</fullName>
    <inlineHelpText>This contains the date your reporting format was developed. The format is MMDDYYYY.</inlineHelpText>
    <label>Program Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>