force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Program_Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Program_Revision_Date__c</fullName>
    <inlineHelpText>This contains the last date your reporting format was revised. The format is MMDDYYYY.</inlineHelpText>
    <label>Program Revision Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>