force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Reporter_Address__c.field-meta.xml
<CustomField>
    <fullName>loan__Reporter_Address__c</fullName>
    <inlineHelpText>This contains the complete mailing address of the processing company ie. the street address, city, state and zip code.</inlineHelpText>
    <label>Reporter Address</label>
    <length>96</length>
    <required>true</required>
    <type>Text</type>
</CustomField>