force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Reporter_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Reporter_Name__c</fullName>
    <label>Reporter Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>