force-app/main/default/objects/loan__Metro2_Parameters__c/fields/loan__Reporter_Phone__c.field-meta.xml
<CustomField>
    <fullName>loan__Reporter_Phone__c</fullName>
    <inlineHelpText>This contains the telephone number (area code + number) of the company that is sending the data ie. the data furnisher or the processor.</inlineHelpText>
    <label>Reporter Phone</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>